--- a/photos/templates/phtos/base.html
+++ b/photos/templates/phtos/base.html
@@ -32,6 +32,11 @@
     rel="stylesheet"
     />
     <title>Vault</title>
+    <style>
+        body {
+        background-color: #ebeff5;
+        }
+    </style>
 </head>
 <body>
     {% block content %}{% endblock %}
@@ -41,5 +46,8 @@
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"
     ></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
 </body>
+    <link rel="stylesheet" href="{% static '/js/base.js' %}">
 </html>
