--- a/photos/templates/phtos/gallery.html
+++ b/photos/templates/phtos/gallery.html
@@ -4,5 +4,17 @@
 {% load static %}
 
 {% block content %}
-<h1>gallery</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md">
+
+
+        </div>
+        <div class="col-md">
+
+            
+        </div>
+    </div>
+</div>
+
 {% endblock %}
