--- a/photos/templates/phtos/base.html
+++ b/photos/templates/phtos/base.html
@@ -19,26 +19,21 @@
     <!-- Font Awesome -->
     <link
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-    rel="stylesheet"
-    />
+    rel="stylesheet"/>
     <!-- Google Fonts -->
     <link
     href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    rel="stylesheet"
-    />
+    rel="stylesheet"/>
     <!-- MDB -->
     <link
     href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"
-    rel="stylesheet"
-    />
+    rel="stylesheet"/>
+    <link rel="stylesheet" href="{% static '/css/base.css' %}">
     <title>Vault</title>
-    <style>
-        body {
-        background-color: #ebeff5;
-        }
-    </style>
 </head>
 <body>
+
+    {% block navbar %}{% endblock %} 
     {% block content %}{% endblock %}
     {% block footer %} {% endblock %}
     <!-- MDB -->
@@ -47,7 +42,6 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"
     ></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-
 </body>
     <link rel="stylesheet" href="{% static '/js/base.js' %}">
 </html>
