--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,31 @@
 /* font-family: 'Great Vibes', cursive;   {deco} */
 /* font-family: 'Merienda', cursive; {headings} */
 /* font-family: 'Playball', cursive; {notes} */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    background-color: #ebeff5;
+}
+.back{
+    background: linear-gradient(
+        0deg
+        ,rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url('/static/images/erwann-stephanne-Th8LYj0vpUY-unsplash.jpg') no-repeat center center fixed;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    perspective: 100rem;
+}
+.box {
+    width: 300px;
+    height: 14rem;
+    border-radius: 7px;
+}
+.overlay{
+    position: relative;
+    top: -6.9rem;
+    height: 1rem;
+}
