--- a/photos/templates/phtos/home.html
+++ b/photos/templates/phtos/home.html
@@ -27,7 +27,7 @@
         <!-- Left links -->
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0"  style="font-family: 'Merienda', cursive;" >
           <li class="nav-item Home">
-            <a style="text-shadow: 2px 2px 2px black; color: white; " class="nav-link active" aria-current="page" href="#">Home</a>
+            <a style="text-shadow: 2px 2px 2px black; color: white; " class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
           </li>
           <li class="nav-item">
                 <a style="margin-left:1rem; text-shadow: 2px 2px 2px black; color: white;" class="nav-link" href="{% url 'gallery' %}">Gallery</a>
