--- a/photos/templates/phtos/photo.html
+++ b/photos/templates/phtos/photo.html
@@ -10,11 +10,16 @@
         <a href="{% url 'gallery' %}"class="fas fa-arrow-circle-left my-3" style="color:black;"> Return</a>
     </div>
     <div class="row justify-content-center">
-        <div class="col">
+        <div class="col d-flex">
             <div class="pho">
                 <img style="max-width:100%; max-height:100%;
-                " src="{% static '/images/adrian-ra-8w8Yj9K_ETA-unsplash.jpg' %}" alt="">
-                <p class="text-muted"></p>
+                " class="card" src="{% static '/images/adrian-ra-8w8Yj9K_ETA-unsplash.jpg' %}" alt="">
+            </div>
+            <div class="ps-5" style="padding-top:60vh;">
+                <h3 class="text-muted">Description:</h3>
+                <p class="text-muted">
+                    "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."
+                </p>
             </div>
         </div>
     </div>
