--- a/photos/templates/phtos/gallery.html
+++ b/photos/templates/phtos/gallery.html
@@ -65,6 +65,9 @@
             </div>
         </div>
         <div class="col-md-4">
+            <div>
+                <a href="{% url 'home' %}"class="fas fa-arrow-circle-left my-3" style=" font-size:1.5rem; color:black;"> Go to homepage</a>
+            </div>
             <div class="card" style="width: 18rem; font-family: 'Playball', cursive;">
                 <div class="card-header">All</div>
                 <ul class="list-group list-group-flush">
