add initial change

--- a/photos/templates/phtos/home.html
+++ b/photos/templates/phtos/home.html
@@ -44,10 +44,14 @@
 <body class="back">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 text-white">
+              <div class="m-2 ps-2" style="padding-top: 3.5rem;text-shadow: 2px 2px 2px black;">
+                <small style="font-family: 'Great Vibes', cursive;"> <i class="fas fa-link pe-1"></i>App's by carbon<i class="fas fa-link ps-1"></i></small>
+                <h1 class="text-white" style="font-family: 'Merienda', cursive;">WELCOME TO BAZENGA VAULT</i></h1>
+                <small style="font-family: 'Great Vibes', cursive;"><i class="fas fa-link pe-1"></i>powered by carbon<i class="fas fa-link ps-1"></i></small>
+                <p style="font-family: 'Merienda', cursive;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dignissim enim sit amet venenatis urna cursus. Id diam maecenas ultricies mi eget mauris. Urna et pharetra pharetra massa massa ultricies mi quis. Netus et malesuada fames ac.</p>
 
-
-
+              </div>
             </div>
             <div class="col-md-8" style="padding-left: 3rem; padding-top: 12rem;">
                 <div class="row p-1">
