--- a/static/css/base.css
+++ b/static/css/base.css
@@ -40,3 +40,9 @@ body {
     height: 3vh;
     width: 3vh;
 }
+.vl{
+    /* border: 3px solid rgb(248, 245, 245); */
+    background-color: #ebeff5;
+    height: 2px;
+    width: 50vw;
+}
