--- a/photos/templates/phtos/gallery.html
+++ b/photos/templates/phtos/gallery.html
@@ -7,8 +7,9 @@
 <div class="container">
     <div class="row my-3">
         <div class="col-md-8">
-            {% for photo in photos %}
-                <div class="row">
+           
+            <div class="row"> 
+                {% for photo in photos %}
                     <div class="col-md-4 py-1">
                         <img
                         src="{{ photo.image.url }}"
@@ -16,15 +17,16 @@
                         alt="..."
                         />
                         <div class="d-flex">
-                            <small class="ps-1">Category: Pets</small>
+                            <small class="ps-1">Category: {{ photo.category.name }}</small>
                             <i class="fas fa-ellipsis-h" style="margin-left:6rem; padding-top:3px; "></i>
                         </div>
-                        <a  href="{% url 'photo' 2 %}"class="btn btn-outline-dark" style="width:100%;" type="button">view image</a>
-                    </div>
-                </div>
-            {% empty %}
-                <h3 class="text-muted" > No photos found </h3>    
-            {% endfor %}
+                        <a  href="{% url 'photo' photo.id %}"class="btn btn-outline-dark" style="width:100%;" type="button">view image</a>
+                    </div> 
+                    {% empty %}
+                    <h3 class="text-muted" > No photos found </h3>    
+                {% endfor %}
+            </div>
+           
         </div>
         <div class="col-md-4">
             <div>
