--- a/photos/templates/phtos/photo.html
+++ b/photos/templates/phtos/photo.html
@@ -19,12 +19,12 @@
             <div class="row">
                 <div class="col-md-7 pho">
                     <img style="max-width:100%; max-height:100%;
-                    " class="card" src="{% static '/images/adrian-ra-8w8Yj9K_ETA-unsplash.jpg' %}" alt="">
+                    " class="card" src="{{ photo.image.url }}" alt="">
                 </div>
-                <div class="col-md-5 ps-5" style="padding-top:60vh;">
+                <div class="col-md-5 ps-5" style="padding-top:46vh;">
                     <h3 class="text-muted" style="font-family: 'Merienda', cursive;">Description:</h3>
                     <p class="text-muted"  style="font-family: 'Playball', cursive;">
-                        "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."
+                        "{{ photo.description }}"
                     </p>
                 </div>
             </div>
