--- a/photos/templates/phtos/gallery.html
+++ b/photos/templates/phtos/gallery.html
@@ -16,11 +16,11 @@
                         class="card-img"
                         alt="..."
                         />
-                        <div class="d-flex">
+                        <div class="d-flex"  style="font-family: 'Merienda', cursive;">
                             <small class="ps-1">Category: {{ photo.category.name }}</small>
-                            <i class="fas fa-ellipsis-h" style="margin-left:6rem; padding-top:3px; "></i>
+                            <i class="fas fa-ellipsis-h" style="margin-left:5rem; padding-top:3px; "></i>
                         </div>
-                        <a  href="{% url 'photo' photo.id %}"class="btn btn-outline-dark" style="width:100%;" type="button">view image</a>
+                        <a  href="{% url 'photo' photo.id %}"class="btn btn-outline-dark" style="width:100%; font-family: 'Merienda', cursive;" type="button">view image</a>
                     </div> 
                     {% empty %}
                     <h3 class="text-muted" > No photos found </h3>    
@@ -39,6 +39,38 @@
                         <li class="list-group-item" style="font-family: 'Merienda', cursive;">{{ category.name }}</li>
                     {% endfor %}
                     <a href="{% url 'addImage' %}" class="btn btn-block-outline"><svg class="gUZ pBj U9O kVc" height="20" width="20" viewBox="0 0 24 24" aria-hidden="true" aria-label="" role="img"><path d="M22 10h-8V2a2 2 0 0 0-4 0v8H2a2 2 0 0 0 0 4h8v8a2 2 0 0 0 4 0v-8h8a2 2 0 0 0 0-4"></path></svg> Add Photo</a>
+                    
+                        <div class="dropdown">
+                            <button
+                            class="btn btn-block-outline dropdown-toggle"
+                            
+                            data-mdb-toggle="dropdown"
+                            aria-expanded="false"
+                            >
+                            <svg class="gUZ pBj U9O kVc" height="20" width="20" viewBox="0 0 24 24" aria-hidden="true" aria-label="" role="img"><path d="M22 10h-8V2a2 2 0 0 0-4 0v8H2a2 2 0 0 0 0 4h8v8a2 2 0 0 0 4 0v-8h8a2 2 0 0 0 0-4"></path></svg>Add Photo
+                            </button>
+                            <div class="dropdown-menu my-2" style="width: 360px">
+                            <form class="px-4 py-3">
+                                <!-- Description input -->
+                                <div class="form-outline mb-2">
+                                    <input type="email" id="form2Example1" class="form-control" />
+                                    <label class="form-label" for="form2Example1">Description</label>
+                                </div>
+
+                                <label class="form-label" for="customFile">Upload Image</label>
+                                <input type="file" class="form-control" id="customFile" />
+
+                                <div class="form-group m-2">
+                                    <label>choose category</label>
+                                    <select name="category" id="" class="form-control">
+                                        <option value="">choose category</option>
+                                    </select>
+                                </div>
+                        
+                                <!-- Submit button -->
+                                <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                            </form>
+                        </div>
                 </ul>
             </div>
             
@@ -48,58 +80,7 @@
 
 
 
-<div class="dropdown">
-    <button
-      class="btn btn-primary dropdown-toggle"
-      type="button"
-      data-mdb-toggle="dropdown"
-      aria-expanded="false"
-    >
-    </button>
-    <div class="dropdown-menu" style="width: 320px">
-      <form class="px-4 py-3">
-        <!-- Email input -->
-        <div class="form-outline mb-4">
-          <input type="email" id="form2Example1" class="form-control" />
-          <label class="form-label" for="form2Example1">Email address</label>
-        </div>
-  
-        <!-- Password input -->
-        <div class="form-outline mb-4">
-          <input type="password" id="form2Example2" class="form-control" />
-          <label class="form-label" for="form2Example2">Password</label>
-        </div>
-  
-        <!-- 2 column grid layout for inline styling -->
-        <div class="row mb-4">
-          <div class="col d-flex justify-content-center">
-            <!-- Checkbox -->
-            <div class="form-check">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                value=""
-                id="form2Example3"
-                checked
-              />
-              <label class="form-check-label" for="form2Example3"> Remember me </label>
-            </div>
-          </div>
-  
-          <div class="col">
-            <!-- Simple link -->
-            <a href="#!">Forgot password?</a>
-          </div>
-        </div>
-  
-        <!-- Submit button -->
-        <button type="submit" class="btn btn-primary btn-block">Sign in</button>
-      </form>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">New around here? Sign up</a>
-      <a class="dropdown-item" href="#">Forgot password?</a>
-    </div>
-  </div>
+
 
 {% endblock %}
 
