--- a/photos/templates/phtos/gallery.html
+++ b/photos/templates/phtos/gallery.html
@@ -18,9 +18,9 @@
                         />
                         <div class="d-flex"  style="font-family: 'Merienda', cursive;">
                             <small class="ps-1">Category: {{ photo.category.name }}</small>
-                            <i class="fas fa-ellipsis-h" style="margin-left:5rem; padding-top:3px; "></i>
+                            <i class="fas fa-ellipsis-h" style="margin-left:3rem; padding-top:3px; "></i>
                         </div>
-                        <a  href="{% url 'photo' photo.id %}"class="btn btn-outline-dark" style="width:100%; font-family: 'Merienda', cursive;" type="button">view image</a>
+                        <a  href="{% url 'photo' photo.id %}"class="btn btn-outline-dark" style="width:100%; font-family: 'Merienda', cursive;" type="button">view More</a>
                     </div> 
                     {% empty %}
                     <h3 class="text-muted" > No photos found </h3>    
@@ -43,7 +43,7 @@
                         <div class="dropdown">
                             <button
                             class="btn btn-block-outline dropdown-toggle"
-                            
+                            style="width:100%;"
                             data-mdb-toggle="dropdown"
                             aria-expanded="false"
                             >
@@ -53,7 +53,7 @@
                             <form class="px-4 py-3">
                                 <!-- Description input -->
                                 <div class="form-outline mb-2">
-                                    <input type="email" id="form2Example1" class="form-control" />
+                                    <input name="category" type="email" id="form2Example1" class="form-control" />
                                     <label class="form-label" for="form2Example1">Description</label>
                                 </div>
 
@@ -62,7 +62,9 @@
 
                                 <div class="form-group m-2">
                                     <label>choose category</label>
-                                    <select name="category" id="" class="form-control">
+                                    <select name="category" class="form-control">
+                                        <option value="none">choose category..</option>
+                                        <option value="">choose category</option>
                                         <option value="">choose category</option>
                                     </select>
                                 </div>
