--- a/photos/templates/phtos/home.html
+++ b/photos/templates/phtos/home.html
@@ -61,23 +61,23 @@
 
         </div>
       </div>
-      <div class="col-md-8" style="padding-left: 3rem; padding-top: 12rem;">
+      <div class="col-md-8" style="padding-left: 3rem; padding-top: 11rem;">
         <div class="row p-1">
           <div class="box" >
             <img class="box img-fluid shadow-4-strong" src="{% static '/images/shifaaz-shamoon-sLAk1guBG90-unsplash.jpg' %}" alt="Paris">
             <div class="overlay p-1">
-            <h1 class="text-white" style="font-family: 'Merienda', cursive; font-size:3vw; padding-top:1.8vh;">MOMBASA COAST</h1>
+              <h1 class="text-white" style="font-family: 'Merienda', cursive; font-size:3vw; padding-top:1.8vh;">MOMBASA COAST</h1>
                 
             </div>
-        </div>
-        <div class="box">
-              <img class="box img-fluid shadow-4-strong" src="{% static '/images/deepak-nautiyal-lWUYwB0E9co-unsplash.jpg' %}" alt="Paris">
-              <div class="overlay p-1">
-                  <h1 class="text-white" style="font-family: 'Merienda', cursive; font-size:3vw; padding-top:2vh;">THE <br> TIGER</h1>
-              </div>
+          </div>
+          <div class="box">
+            <img class="box img-fluid shadow-4-strong" src="{% static '/images/deepak-nautiyal-lWUYwB0E9co-unsplash.jpg' %}" alt="Paris">
+            <div class="overlay p-1">
+              <h1 class="text-white" style="font-family: 'Merienda', cursive; font-size:3vw; padding-top:2vh;">THE <br> TIGER</h1>
+            </div>
 
-        </div>
-        <div class="box">
+          </div>
+          <div class="box">
               <img class="box img-fluid shadow-4-strong" src="{% static '/images/paul-volkmer-JJsJTO3KaII-unsplash.jpg' %}" alt="Paris">
               <div class="overlay p-1">
                   <h1 class="text-white" style="font-family: 'Merienda', cursive; font-size:3vw; padding-top:2vh;">YELLOW <br> STONE</h1>
@@ -86,11 +86,12 @@
         </div>
         <div class="example d-flex"> 
           <div class="vl"></div>
-          <div><img src="https://img.icons8.com/color/48/000000/instagram-new.png" width="20px"/>
-          </div>
-          <div><img src="https://img.icons8.com/fluency/48/000000/facebook-circled.png" width="20px"/>
-          </div>
-          <div><img src="https://img.icons8.com/fluency/48/000000/youtube-play.png" width="20px"/>
+          <div class="png">
+            <div class="ps-2"><img src="https://img.icons8.com/color/48/000000/instagram-new.png" width="25px"/>
+            </div>
+            <div><img src="https://img.icons8.com/fluency/48/000000/facebook-circled.png" width="25px"/>
+            </div>
+            <div class="pe-2"><img src="https://img.icons8.com/fluency/48/000000/youtube-play.png" width="25px"/></div>
           </div>
           <div class="vl"></div>
         </div>
