--- a/photos/templates/phtos/gallery.html
+++ b/photos/templates/phtos/gallery.html
@@ -50,27 +50,36 @@
                             <svg class="gUZ pBj U9O kVc" height="20" width="20" viewBox="0 0 24 24" aria-hidden="true" aria-label="" role="img"><path d="M22 10h-8V2a2 2 0 0 0-4 0v8H2a2 2 0 0 0 0 4h8v8a2 2 0 0 0 4 0v-8h8a2 2 0 0 0 0-4"></path></svg>Add Photo
                             </button>
                             <div class="dropdown-menu my-2" style="width: 360px">
-                            <form class="px-4 py-3">
+                            <form class="px-4 py-3" method="POST" action="" enctype="multipart/form-data"> {% csrf_token %}
                                 <!-- Description input -->
                                 <div class="form-outline mb-2">
-                                    <input name="category" type="email" id="form2Example1" class="form-control" />
+                                    <input required name="description" type="text" id="form2Example1" class="form-control" />
                                     <label class="form-label" for="form2Example1">Description</label>
                                 </div>
 
                                 <label class="form-label" for="customFile">Upload Image</label>
-                                <input type="file" class="form-control" id="customFile" />
+                                <input type="file" required name="image" class="form-control" id="customFile" />
 
-                                <div class="form-group m-2">
+                                <div class="form-group my-2" style="font-family: 'Merienda', cursive;">
                                     <label>choose category</label>
                                     <select name="category" class="form-control">
                                         <option value="none">choose category..</option>
-                                        <option value="">choose category</option>
-                                        <option value="">choose category</option>
+                                        {% for category in categories %}
+
+                                            <option value="{{ category.id }}">{{ category.name }}</option>
+                                        
+                                        {% endfor %}
                                     </select>
+                                </div>
+
+                                <!-- Description input -->
+                                <div class="form-outline mb-2">
+                                    <input name="category_new" type="name" id="form2Example1" class="form-control" />
+                                    <label class="form-label" for="form2Example1">New category </label>
                                 </div>
                         
                                 <!-- Submit button -->
-                                <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                                <button type="submit" class="btn btn-primary btn-block">Submit</button>
                             </form>
                         </div>
                 </ul>
