--- a/photos/templates/phtos/photo.html
+++ b/photos/templates/phtos/photo.html
@@ -26,7 +26,13 @@
                     <p class="text-muted"  style="font-family: 'Playball', cursive;">
                         "{{ photo.description }}"
                     </p>
+                    <form action="{% url 'photo' photo.id %}" method="POST" style="font-family: 'Merienda', cursive;">{% csrf_token %}
+                        <button type="submit" class="btn btn-outline-danger btn-rounded" name="Confirm"
+                        data-mdb-ripple-color="dark">delete
+                        </button>
+                    </form>
                 </div>
+               
             </div>
         </div>
     </div>
